StreamParser.py
# Generated from Stream.g4 by ANTLR 4.8
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO




class StreamParser ( Parser ):

    grammarFileName = "Stream.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "':'", "';'", "'='", "'and'", "'or'", 
                     "'!'", "'not'", "'&&'", "'||'", "'->'", "'implies'", 
                     "'pre'", "'once'", "'['", "','", "']'", "'inf'", "'always'", 
                     "'since'", "'<'", "'<='", "'>'", "'>='", "'=='", "'!='", 
                     "'min'", "'max'", "'avg'", "'('", "')'", "'int'", "'real'", 
                     "'bool'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "IDENTIFIER", "NUMBER", 
                      "REAL", "WS" ]

    RULE_propertyExpr = 0
    RULE_tyExpr = 1
    RULE_namedExpr = 2
    RULE_expr = 3
    RULE_mtlExpr = 4
    RULE_evalExpr = 5
    RULE_aggregationExpr = 6
    RULE_atom = 7
    RULE_idlist = 8
    RULE_types = 9

    ruleNames =  [ "propertyExpr", "tyExpr", "namedExpr", "expr", "mtlExpr", 
                   "evalExpr", "aggregationExpr", "atom", "idlist", "types" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    T__18=19
    T__19=20
    T__20=21
    T__21=22
    T__22=23
    T__23=24
    T__24=25
    T__25=26
    T__26=27
    T__27=28
    T__28=29
    T__29=30
    T__30=31
    T__31=32
    T__32=33
    IDENTIFIER=34
    NUMBER=35
    REAL=36
    WS=37

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.8")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class PropertyExprContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.ty = None # TyExprContext
            self.child = None # NamedExprContext

        def tyExpr(self):
            return self.getTypedRuleContext(StreamParser.TyExprContext,0)


        def namedExpr(self):
            return self.getTypedRuleContext(StreamParser.NamedExprContext,0)


        def getRuleIndex(self):
            return StreamParser.RULE_propertyExpr

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPropertyExpr" ):
                return visitor.visitPropertyExpr(self)
            else:
                return visitor.visitChildren(self)




    def propertyExpr(self):

        localctx = StreamParser.PropertyExprContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_propertyExpr)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 20
            localctx.ty = self.tyExpr()
            self.state = 21
            localctx.child = self.namedExpr()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TyExprContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.tname = None # Token
            self.t = None # TypesContext

        def IDENTIFIER(self, i:int=None):
            if i is None:
                return self.getTokens(StreamParser.IDENTIFIER)
            else:
                return self.getToken(StreamParser.IDENTIFIER, i)

        def types(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(StreamParser.TypesContext)
            else:
                return self.getTypedRuleContext(StreamParser.TypesContext,i)


        def getRuleIndex(self):
            return StreamParser.RULE_tyExpr

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTyExpr" ):
                return visitor.visitTyExpr(self)
            else:
                return visitor.visitChildren(self)




    def tyExpr(self):

        localctx = StreamParser.TyExprContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_tyExpr)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 30
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,0,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 23
                    localctx.tname = self.match(StreamParser.IDENTIFIER)

                    self.state = 24
                    self.match(StreamParser.T__0)
                    self.state = 25
                    localctx.t = self.types()
                    self.state = 26
                    self.match(StreamParser.T__1) 
                self.state = 32
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,0,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class NamedExprContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.name = None # Token
            self.child = None # ExprContext

        def IDENTIFIER(self, i:int=None):
            if i is None:
                return self.getTokens(StreamParser.IDENTIFIER)
            else:
                return self.getToken(StreamParser.IDENTIFIER, i)

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(StreamParser.ExprContext)
            else:
                return self.getTypedRuleContext(StreamParser.ExprContext,i)


        def getRuleIndex(self):
            return StreamParser.RULE_namedExpr

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitNamedExpr" ):
                return visitor.visitNamedExpr(self)
            else:
                return visitor.visitChildren(self)




    def namedExpr(self):

        localctx = StreamParser.NamedExprContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_namedExpr)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 38 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 33
                localctx.name = self.match(StreamParser.IDENTIFIER)

                self.state = 34
                self.match(StreamParser.T__2)
                self.state = 35
                localctx.child = self.expr(0)
                self.state = 36
                self.match(StreamParser.T__1)
                self.state = 40 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==StreamParser.IDENTIFIER):
                    break

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExprContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return StreamParser.RULE_expr

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)


    class OrContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a StreamParser.ExprContext
            super().__init__(parser)
            self.left = None # ExprContext
            self.right = None # ExprContext
            self.copyFrom(ctx)

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(StreamParser.ExprContext)
            else:
                return self.getTypedRuleContext(StreamParser.ExprContext,i)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitOr" ):
                return visitor.visitOr(self)
            else:
                return visitor.visitChildren(self)


    class AtomicExpressionContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a StreamParser.ExprContext
            super().__init__(parser)
            self.child = None # MtlExprContext
            self.copyFrom(ctx)

        def mtlExpr(self):
            return self.getTypedRuleContext(StreamParser.MtlExprContext,0)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAtomicExpression" ):
                return visitor.visitAtomicExpression(self)
            else:
                return visitor.visitChildren(self)


    class AndContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a StreamParser.ExprContext
            super().__init__(parser)
            self.left = None # ExprContext
            self.right = None # ExprContext
            self.copyFrom(ctx)

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(StreamParser.ExprContext)
            else:
                return self.getTypedRuleContext(StreamParser.ExprContext,i)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAnd" ):
                return visitor.visitAnd(self)
            else:
                return visitor.visitChildren(self)



    def expr(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = StreamParser.ExprContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 6
        self.enterRecursionRule(localctx, 6, self.RULE_expr, _p)
        try:
            self.enterOuterAlt(localctx, 1)
            localctx = StreamParser.AtomicExpressionContext(self, localctx)
            self._ctx = localctx
            _prevctx = localctx

            self.state = 43
            localctx.child = self.mtlExpr(0)
            self._ctx.stop = self._input.LT(-1)
            self.state = 53
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,3,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    self.state = 51
                    self._errHandler.sync(self)
                    la_ = self._interp.adaptivePredict(self._input,2,self._ctx)
                    if la_ == 1:
                        localctx = StreamParser.AndContext(self, StreamParser.ExprContext(self, _parentctx, _parentState))
                        localctx.left = _prevctx
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expr)
                        self.state = 45
                        if not self.precpred(self._ctx, 2):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 2)")

                        self.state = 46
                        self.match(StreamParser.T__3)
                        self.state = 47
                        localctx.right = self.expr(3)
                        pass

                    elif la_ == 2:
                        localctx = StreamParser.OrContext(self, StreamParser.ExprContext(self, _parentctx, _parentState))
                        localctx.left = _prevctx
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expr)
                        self.state = 48
                        if not self.precpred(self._ctx, 1):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 1)")

                        self.state = 49
                        self.match(StreamParser.T__4)
                        self.state = 50
                        localctx.right = self.expr(2)
                        pass

             
                self.state = 55
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,3,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx


    class MtlExprContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return StreamParser.RULE_mtlExpr

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)


    class TimedAlwaysInfContext(MtlExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a StreamParser.MtlExprContext
            super().__init__(parser)
            self.l = None # Token
            self.child = None # MtlExprContext
            self.copyFrom(ctx)

        def NUMBER(self):
            return self.getToken(StreamParser.NUMBER, 0)
        def mtlExpr(self):
            return self.getTypedRuleContext(StreamParser.MtlExprContext,0)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTimedAlwaysInf" ):
                return visitor.visitTimedAlwaysInf(self)
            else:
                return visitor.visitChildren(self)


    class EvaluationContext(MtlExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a StreamParser.MtlExprContext
            super().__init__(parser)
            self.child = None # EvalExprContext
            self.copyFrom(ctx)

        def evalExpr(self):
            return self.getTypedRuleContext(StreamParser.EvalExprContext,0)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitEvaluation" ):
                return visitor.visitEvaluation(self)
            else:
                return visitor.visitChildren(self)


    class TimedAlwaysContext(MtlExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a StreamParser.MtlExprContext
            super().__init__(parser)
            self.l = None # Token
            self.u = None # Token
            self.child = None # MtlExprContext
            self.copyFrom(ctx)

        def NUMBER(self, i:int=None):
            if i is None:
                return self.getTokens(StreamParser.NUMBER)
            else:
                return self.getToken(StreamParser.NUMBER, i)
        def mtlExpr(self):
            return self.getTypedRuleContext(StreamParser.MtlExprContext,0)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTimedAlways" ):
                return visitor.visitTimedAlways(self)
            else:
                return visitor.visitChildren(self)


    class NegationContext(MtlExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a StreamParser.MtlExprContext
            super().__init__(parser)
            self.child = None # MtlExprContext
            self.copyFrom(ctx)

        def mtlExpr(self):
            return self.getTypedRuleContext(StreamParser.MtlExprContext,0)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitNegation" ):
                return visitor.visitNegation(self)
            else:
                return visitor.visitChildren(self)


    class OnceContext(MtlExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a StreamParser.MtlExprContext
            super().__init__(parser)
            self.child = None # MtlExprContext
            self.copyFrom(ctx)

        def mtlExpr(self):
            return self.getTypedRuleContext(StreamParser.MtlExprContext,0)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitOnce" ):
                return visitor.visitOnce(self)
            else:
                return visitor.visitChildren(self)


    class TimedSinceContext(MtlExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a StreamParser.MtlExprContext
            super().__init__(parser)
            self.left = None # MtlExprContext
            self.l = None # Token
            self.u = None # Token
            self.right = None # MtlExprContext
            self.copyFrom(ctx)

        def mtlExpr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(StreamParser.MtlExprContext)
            else:
                return self.getTypedRuleContext(StreamParser.MtlExprContext,i)

        def NUMBER(self, i:int=None):
            if i is None:
                return self.getTokens(StreamParser.NUMBER)
            else:
                return self.getToken(StreamParser.NUMBER, i)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTimedSince" ):
                return visitor.visitTimedSince(self)
            else:
                return visitor.visitChildren(self)


    class PreviouslyContext(MtlExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a StreamParser.MtlExprContext
            super().__init__(parser)
            self.child = None # MtlExprContext
            self.copyFrom(ctx)

        def mtlExpr(self):
            return self.getTypedRuleContext(StreamParser.MtlExprContext,0)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPreviously" ):
                return visitor.visitPreviously(self)
            else:
                return visitor.visitChildren(self)


    class TimedSinceInfContext(MtlExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a StreamParser.MtlExprContext
            super().__init__(parser)
            self.left = None # MtlExprContext
            self.l = None # Token
            self.right = None # MtlExprContext
            self.copyFrom(ctx)

        def mtlExpr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(StreamParser.MtlExprContext)
            else:
                return self.getTypedRuleContext(StreamParser.MtlExprContext,i)

        def NUMBER(self):
            return self.getToken(StreamParser.NUMBER, 0)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTimedSinceInf" ):
                return visitor.visitTimedSinceInf(self)
            else:
                return visitor.visitChildren(self)


    class TimedOnceContext(MtlExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a StreamParser.MtlExprContext
            super().__init__(parser)
            self.l = None # Token
            self.u = None # Token
            self.child = None # MtlExprContext
            self.copyFrom(ctx)

        def NUMBER(self, i:int=None):
            if i is None:
                return self.getTokens(StreamParser.NUMBER)
            else:
                return self.getToken(StreamParser.NUMBER, i)
        def mtlExpr(self):
            return self.getTypedRuleContext(StreamParser.MtlExprContext,0)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTimedOnce" ):
                return visitor.visitTimedOnce(self)
            else:
                return visitor.visitChildren(self)


    class DisjunctionContext(MtlExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a StreamParser.MtlExprContext
            super().__init__(parser)
            self.left = None # MtlExprContext
            self.right = None # MtlExprContext
            self.copyFrom(ctx)

        def mtlExpr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(StreamParser.MtlExprContext)
            else:
                return self.getTypedRuleContext(StreamParser.MtlExprContext,i)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDisjunction" ):
                return visitor.visitDisjunction(self)
            else:
                return visitor.visitChildren(self)


    class ImpliesContext(MtlExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a StreamParser.MtlExprContext
            super().__init__(parser)
            self.left = None # MtlExprContext
            self.right = None # MtlExprContext
            self.copyFrom(ctx)

        def mtlExpr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(StreamParser.MtlExprContext)
            else:
                return self.getTypedRuleContext(StreamParser.MtlExprContext,i)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitImplies" ):
                return visitor.visitImplies(self)
            else:
                return visitor.visitChildren(self)


    class ConjunctionContext(MtlExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a StreamParser.MtlExprContext
            super().__init__(parser)
            self.left = None # MtlExprContext
            self.right = None # MtlExprContext
            self.copyFrom(ctx)

        def mtlExpr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(StreamParser.MtlExprContext)
            else:
                return self.getTypedRuleContext(StreamParser.MtlExprContext,i)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitConjunction" ):
                return visitor.visitConjunction(self)
            else:
                return visitor.visitChildren(self)


    class SinceContext(MtlExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a StreamParser.MtlExprContext
            super().__init__(parser)
            self.left = None # MtlExprContext
            self.right = None # MtlExprContext
            self.copyFrom(ctx)

        def mtlExpr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(StreamParser.MtlExprContext)
            else:
                return self.getTypedRuleContext(StreamParser.MtlExprContext,i)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSince" ):
                return visitor.visitSince(self)
            else:
                return visitor.visitChildren(self)


    class AlwaysContext(MtlExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a StreamParser.MtlExprContext
            super().__init__(parser)
            self.child = None # MtlExprContext
            self.copyFrom(ctx)

        def mtlExpr(self):
            return self.getTypedRuleContext(StreamParser.MtlExprContext,0)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAlways" ):
                return visitor.visitAlways(self)
            else:
                return visitor.visitChildren(self)


    class TimedOnceInfContext(MtlExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a StreamParser.MtlExprContext
            super().__init__(parser)
            self.l = None # Token
            self.child = None # MtlExprContext
            self.copyFrom(ctx)

        def NUMBER(self):
            return self.getToken(StreamParser.NUMBER, 0)
        def mtlExpr(self):
            return self.getTypedRuleContext(StreamParser.MtlExprContext,0)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTimedOnceInf" ):
                return visitor.visitTimedOnceInf(self)
            else:
                return visitor.visitChildren(self)



    def mtlExpr(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = StreamParser.MtlExprContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 8
        self.enterRecursionRule(localctx, 8, self.RULE_mtlExpr, _p)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 94
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,4,self._ctx)
            if la_ == 1:
                localctx = StreamParser.EvaluationContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx

                self.state = 57
                localctx.child = self.evalExpr()
                pass

            elif la_ == 2:
                localctx = StreamParser.NegationContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx
                self.state = 58
                _la = self._input.LA(1)
                if not(_la==StreamParser.T__5 or _la==StreamParser.T__6):
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()
                self.state = 59
                localctx.child = self.mtlExpr(14)
                pass

            elif la_ == 3:
                localctx = StreamParser.PreviouslyContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx
                self.state = 60
                self.match(StreamParser.T__11)
                self.state = 61
                localctx.child = self.mtlExpr(10)
                pass

            elif la_ == 4:
                localctx = StreamParser.OnceContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx
                self.state = 62
                self.match(StreamParser.T__12)
                self.state = 63
                localctx.child = self.mtlExpr(9)
                pass

            elif la_ == 5:
                localctx = StreamParser.TimedOnceContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx
                self.state = 64
                self.match(StreamParser.T__12)
                self.state = 65
                self.match(StreamParser.T__13)
                self.state = 66
                localctx.l = self.match(StreamParser.NUMBER)
                self.state = 67
                self.match(StreamParser.T__14)
                self.state = 68
                localctx.u = self.match(StreamParser.NUMBER)
                self.state = 69
                self.match(StreamParser.T__15)
                self.state = 70
                localctx.child = self.mtlExpr(8)
                pass

            elif la_ == 6:
                localctx = StreamParser.TimedOnceInfContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx
                self.state = 71
                self.match(StreamParser.T__12)
                self.state = 72
                self.match(StreamParser.T__13)
                self.state = 73
                localctx.l = self.match(StreamParser.NUMBER)
                self.state = 74
                self.match(StreamParser.T__14)
                self.state = 75
                self.match(StreamParser.T__16)
                self.state = 76
                self.match(StreamParser.T__15)
                self.state = 77
                localctx.child = self.mtlExpr(7)
                pass

            elif la_ == 7:
                localctx = StreamParser.AlwaysContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx
                self.state = 78
                self.match(StreamParser.T__17)
                self.state = 79
                localctx.child = self.mtlExpr(6)
                pass

            elif la_ == 8:
                localctx = StreamParser.TimedAlwaysContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx
                self.state = 80
                self.match(StreamParser.T__17)
                self.state = 81
                self.match(StreamParser.T__13)
                self.state = 82
                localctx.l = self.match(StreamParser.NUMBER)
                self.state = 83
                self.match(StreamParser.T__14)
                self.state = 84
                localctx.u = self.match(StreamParser.NUMBER)
                self.state = 85
                self.match(StreamParser.T__15)
                self.state = 86
                localctx.child = self.mtlExpr(5)
                pass

            elif la_ == 9:
                localctx = StreamParser.TimedAlwaysInfContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx
                self.state = 87
                self.match(StreamParser.T__17)
                self.state = 88
                self.match(StreamParser.T__13)
                self.state = 89
                localctx.l = self.match(StreamParser.NUMBER)
                self.state = 90
                self.match(StreamParser.T__14)
                self.state = 91
                self.match(StreamParser.T__16)
                self.state = 92
                self.match(StreamParser.T__15)
                self.state = 93
                localctx.child = self.mtlExpr(4)
                pass


            self._ctx.stop = self._input.LT(-1)
            self.state = 126
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,6,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    self.state = 124
                    self._errHandler.sync(self)
                    la_ = self._interp.adaptivePredict(self._input,5,self._ctx)
                    if la_ == 1:
                        localctx = StreamParser.ConjunctionContext(self, StreamParser.MtlExprContext(self, _parentctx, _parentState))
                        localctx.left = _prevctx
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_mtlExpr)
                        self.state = 96
                        if not self.precpred(self._ctx, 13):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 13)")

                        self.state = 97
                        self.match(StreamParser.T__7)
                        self.state = 98
                        localctx.right = self.mtlExpr(14)
                        pass

                    elif la_ == 2:
                        localctx = StreamParser.DisjunctionContext(self, StreamParser.MtlExprContext(self, _parentctx, _parentState))
                        localctx.left = _prevctx
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_mtlExpr)
                        self.state = 99
                        if not self.precpred(self._ctx, 12):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 12)")

                        self.state = 100
                        self.match(StreamParser.T__8)
                        self.state = 101
                        localctx.right = self.mtlExpr(13)
                        pass

                    elif la_ == 3:
                        localctx = StreamParser.ImpliesContext(self, StreamParser.MtlExprContext(self, _parentctx, _parentState))
                        localctx.left = _prevctx
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_mtlExpr)
                        self.state = 102
                        if not self.precpred(self._ctx, 11):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 11)")
                        self.state = 103
                        _la = self._input.LA(1)
                        if not(_la==StreamParser.T__9 or _la==StreamParser.T__10):
                            self._errHandler.recoverInline(self)
                        else:
                            self._errHandler.reportMatch(self)
                            self.consume()
                        self.state = 104
                        localctx.right = self.mtlExpr(12)
                        pass

                    elif la_ == 4:
                        localctx = StreamParser.SinceContext(self, StreamParser.MtlExprContext(self, _parentctx, _parentState))
                        localctx.left = _prevctx
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_mtlExpr)
                        self.state = 105
                        if not self.precpred(self._ctx, 3):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 3)")
                        self.state = 106
                        self.match(StreamParser.T__18)
                        self.state = 107
                        localctx.right = self.mtlExpr(4)
                        pass
